--- a/openCV440/build.gradle
+++ b/openCV440/build.gradle
@@ -39,12 +39,10 @@ android {
     }
 
     sourceSets {
-        main {
-            jniLibs.srcDirs = ['src/main/jniLibs']
-            java.srcDirs = ['src/main/java']
-            res.srcDirs = ['src/main/res']
-            manifest.srcFile 'src/main/AndroidManifest.xml'
-        }
+        main.java.srcDirs += 'src/main/java'
+        main.jniLibs.srcDirs = ['src/main/jniLibs']
+        main.res.srcDirs = ['src/main/res']
+        main.manifest.srcFile 'src/main/AndroidManifest.xml'
     }
 
     externalNativeBuild {
@@ -65,12 +63,14 @@ task androidSourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
 }
 
+def githubProperties = new Properties()
+githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
+
 afterEvaluate {
     publishing {
         publications {
             release(MavenPublication) {
                 from components.release
-
                 artifact androidSourcesJar
 
                 groupId 'com.zynkware'
@@ -78,23 +78,15 @@ afterEvaluate {
                 version openCVersionName
             }
         }
-//        repositories {
-//            maven {
-//                name = "GitHubPackages"
-//                /** Configure path of your package repository on Github
-//                 ** Replace GITHUB_USERID with your/organisation Github userID
-//                 ** and REPOSITORY with the repository name on GitHub
-//                 */
-//                url = uri("https://maven.pkg.github.com/GITHUB_USERID/REPOSITORY")
-//                credentials {
-//                    /** Create github.properties in root project folder file with
-//                     ** gpr.usr=GITHUB_USER_ID & gpr.key=PERSONAL_ACCESS_TOKEN
-//                     ** Set env variable GPR_USER & GPR_API_KEY if not adding a properties file**/
-//
-//                    username = githubProperties['gpr.usr'] ?: System.getenv("GPR_USER")
-//                    password = githubProperties['gpr.key'] ?: System.getenv("GPR_API_KEY")
-//                }
-//            }
-//        }
+        repositories {
+            maven {
+                name = "ZynkwareTinyOpenCV"
+                url = uri("https://maven.pkg.github.com/zynkware/Tiny-OpenCV")
+                credentials {
+                    username = githubProperties['gpr.usr']
+                    password = githubProperties['gpr.key']
+                }
+            }
+        }
     }
 }
