--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,10 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
