--- a/openCV440/build.gradle
+++ b/openCV440/build.gradle
@@ -70,30 +70,30 @@ task androidSourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
 }
 
-def githubProperties = new Properties()
-githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
-
-afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.release
-                artifact androidSourcesJar
-
-                groupId 'com.zynkware'
-                artifactId 'opencv'
-                version openCVersionName
-            }
-        }
-        repositories {
-            maven {
-                name = "ZynkwareTinyOpenCV"
-                url = uri("https://maven.pkg.github.com/zynkware/Tiny-OpenCV")
-                credentials {
-                    username = githubProperties['gpr.usr']
-                    password = githubProperties['gpr.key']
-                }
-            }
-        }
-    }
-}
+//def githubProperties = new Properties()
+//githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
+//
+//afterEvaluate {
+//    publishing {
+//        publications {
+//            release(MavenPublication) {
+//                from components.release
+//                artifact androidSourcesJar
+//
+//                groupId 'com.zynkware'
+//                artifactId 'opencv'
+//                version openCVersionName
+//            }
+//        }
+//        repositories {
+//            maven {
+//                name = "ZynkwareTinyOpenCV"
+//                url = uri("https://maven.pkg.github.com/zynkware/Tiny-OpenCV")
+//                credentials {
+//                    username = githubProperties['gpr.usr']
+//                    password = githubProperties['gpr.key']
+//                }
+//            }
+//        }
+//    }
+//}
