--- a/openCV440/build.gradle
+++ b/openCV440/build.gradle
@@ -1,8 +1,11 @@
 apply plugin: 'com.android.library'
-apply plugin: 'maven-publish'
+//apply plugin: 'maven-publish'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group="com.zynkware"
 
 def openCVersionName = "4.4.0"
-def libraryVersionCode = 1
+def libraryVersionCode = 3
 
 repositories {
     mavenCentral()
